--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Das Habitat Augsburg e.V.</title>
 		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="christmas.css" />
 	</head>
 	<body>
 		<div class="page">
@@ -15,45 +16,52 @@
 				<p>Nährboden für die Zukunft. <br />Deine offene Werkstatt.</p>
 			</header>
 
+			<section class="christmas">
+				Das Habitat macht Weihnachtsferien vom 17. Dezember 2018 bis zum 3. Januar 2019!<br />
+				Wir sind ab dem 4. Januar wieder für Euch da!
+			</section>
+
 			<section class="section--hello">
 				<h2>Hallo!</h2>
 
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
-					praesentium! Optio incidunt, accusantium nemo dolor nulla vitae deleniti
-					adipisci molestiae tempore porro reprehenderit facere iure, eum, hic fugit
-					labore quo.
+					Das Habitat ist Augsburgs neue offene Werkstatt. Hier kannst du allerlei
+					Projekte von der Idee bis zur Fertigstellung umsetzen. Egal, ob es ein neuer
+					Esstisch werden soll, du ein altes Möbelstück reparieren oder dich einfach
+					ausprobieren möchtest: Unsere Fachberater stehen dir mit Rat und Tat zur Seite.
 				</p>
 
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
-					praesentium! Optio incidunt, accusantium nemo dolor nulla vitae deleniti
-					adipisci molestiae tempore porro reprehenderit facere iure, eum, hic fugit
-					labore quo.
+					Dahinter steht ein ehrenamtliches Team aus über 30 Mitgliedern, darunter
+					Schreiner, Schlosser, aber auch Gestalter und Physiker. Das Team könnte also
+					bunter nicht sein.
 				</p>
 
 				<h3>Stage 1</h3>
 
 				<p>
-					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate eligendi
-					ipsa incidunt inventore! Laborum repellat consequatur possimus pariatur
-					necessitatibus perspiciatis optio blanditiis! Pariatur in repudiandae, sed
-					nesciunt tempore molestias ut.
+					Im Moment steht uns und dir eine umfangreich ausgestattete Schreinerei zur
+					Verfügung. Bis mindestens Juli 2019 kannst du an professionellen Maschinen
+					arbeiten, lernen und Kleines wie Großes schaffen.
 				</p>
 
 				<h3>Stage 2</h3>
 
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur,
-					sapiente assumenda nesciunt vel hic numquam voluptas nobis possimus itaque,
-					voluptates molestiae reiciendis rem, neque earum officiis. Nobis, atque tenetur!
+					Im Sommer 2019 ziehen wir in eine neue Halle um und erweitern unser
+					Werkstattangebot. Eine Schlosserei, eine Siebdruckwerkstatt, eine Goldschmiede,
+					Fräse und 3D-Drucker und vieles mehr wirst du in Zukunft nutzen können. Und
+					nicht nur das: Wir wollen das Habitat zu einem Ort des Austausches, der
+					Zusammenarbeit und des Verweilens machen. Dafür bauen wir unter anderem ein
+					Co-Working Space und ein Café auf. Es wird Räume für Ausstellungen, Seminare und
+					Vorträge geben. Das alles an einem Ort – in Augsburg - in deinem Habitat.
 				</p>
 			</section>
 
 			<section class="section--open-hours">
 				<h2>Öffnungszeiten</h2>
 
-				<dl>
+				<dl style="opacity: 0.3">
 					<dt>Freitag &amp; Samstag</dt>
 					<dd>15 bis 21 Uhr</dd>
 
@@ -65,8 +73,21 @@
 
 				<p>
 					Eberlestraße 29<br />
+					Haus B<br />
 					86157 Augsburg
 				</p>
+
+				<h2>Anderswo</h2>
+
+				<ul>
+					<li><a href="https://www.facebook.com/habitataugsburg/">Facebook</a></li>
+					<li><a href="https://www.instagram.com/das_habitat_augsburg/">Instagram</a></li>
+					<li><a href="https://twitter.com/@habitataugsburg">Twitter</a></li>
+				</ul>
+
+				<h2>Kontakt</h2>
+
+				<p>kontakt [at] das-habitat.de</p>
 			</section>
 
 			<section class="section--prices">
@@ -89,7 +110,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>&nbsp;</td>
+							<td>–</td>
 							<td>
 								<p>
 									<span class="price">20€</span>
@@ -113,7 +134,7 @@
 							<td>
 								<span class="price">1€</span> <span class="--meta">pro Stunde</span>
 							</td>
-							<td>&nbsp;</td>
+							<td>–</td>
 						</tr>
 						<tr>
 							<td>
@@ -122,7 +143,7 @@
 							<td>
 								<span class="price">5€</span> <span class="--meta">pro Tag</span>
 							</td>
-							<td>&nbsp;</td>
+							<td>–</td>
 						</tr>
 					</tbody>
 				</table>
@@ -130,15 +151,20 @@
 				<p>
 					Für alle, die eine Ermäßigung wollen? Ja. Wir wollen, dass jeder zu uns kommen
 					kann. Schon ab 15€ im Monat können wir unsere Kosten decken und mit jedem Euro
-					mehr unterstützt uns außerdem dabei noch besser zu werden.
+					mehr unterstützt Du uns außerdem dabei noch besser zu werden.
 				</p>
 
 				<h4>Maschineneinweisungen</h4>
 
 				<p>
 					Zu den Gruppenterminen 10€ pro Person. Wenn es ruhig ist und dein Fachberater
-					gerade Zeit hat, klappt das auch spontan, frag einfach mal. Falls nicht brauchst
-					du einen Beratungstermin.
+					gerade Zeit hat, klappt das auch spontan, frag einfach mal. Falls nicht, kannst
+					du dir einen Einzelberatungstermin buchen.
+				</p>
+
+				<p>
+					Die Termine für die nächsten Einweisungen erfährst du aktuell
+					<a href="https://www.facebook.com/habitataugsburg/">auf Facebook.</a>
 				</p>
 
 				<h4>Maschinenlaufzeiten</h4>
@@ -156,25 +182,24 @@
 
 				<p>
 					Weil jeder Unterstützung brauchen kann, kannst du jederzeit jemanden mitbringen.
-					Für 2€ pro Stunde ohne Abo darf dich diese/r auch mit stromlosem Werkzeug
+					Diese/r darf dich auch ohne Abo für 2€ pro Stunde mit stromlosem Werkzeug
 					unterstützen.
 				</p>
 
 				<h4>Kinder und Jugendliche</h4>
 
 				<p>
-					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate velit odio
-					quas iusto tenetur est, sint fugit, assumenda consequuntur atque deleniti,
-					fugiat suscipit unde mollitia magni illo blanditiis minima dolores.
+					Kinder bis 14 dürfen in Absprache mit den FachberaterInnen und in Begleitung
+					einer Aufsichtsperson kostenlos arbeiten. Kinder ab 14 zahlen den regulären
+					Preis.
 				</p>
 
 				<h4>Lagerung</h4>
 
 				<p>
 					Wenn du angefangene Projekte nicht mit nach Hause nehmen willst kannst du
-					Flaches für 2€ pro Woche im Plattenlager und Sperriges für 5€ pro Woche pro
-					Quadratmeter Stellfläche von Montags bis Freitag. Von Freitag bis Sonntag zahlst
-					du nichts.
+					Flaches für 2€ im Plattenlager und Sperriges für 5€ pro Quadratmeter Stellfläche
+					von Montag bis Freitag lagern. Von Freitag bis Sonntag zahlst du nichts.
 				</p>
 			</section>
 
@@ -189,11 +214,14 @@
 					<li>Bandsäge</li>
 					<li>Hobelmaschine</li>
 					<li>Bandschleifer</li>
+					<li>Langbandschleifmaschine</li>
 					<li>Ständerbohrmaschine</li>
 					<li>Furniersäge</li>
+					<li>Furniernähmaschine</li>
 					<li>Furnierpresse</li>
 					<li>Tischfräse</li>
-					<li>Langloch-Bohrmaschine</li>
+					<li>Langlochbohrmaschine</li>
+					<li>Lochreihenbohrmaschine</li>
 				</ul>
 
 				<p>Und natürlich jede Menge anderes Werkzeug und Zubehör.</p>
@@ -210,8 +238,12 @@
 
 			<footer class="footer--end">
 				Beste Grüße, Das Habitat Augsburg e.V.<br />
-				<span class="--meta">Schaut mal vorbei!</span>
+				Schau mal vorbei!
 			</footer>
+
+			<div class="copy">
+				<a href="imprint.html" target="_blank">Impressum &amp; Datenschutz</a>
+			</div>
 		</div>
 	</body>
 </html>
