--- a/content/neue-preise/_index.html
+++ b/content/neue-preise/_index.html
@@ -1,11 +1,7 @@
 ---
-title: Angebot & Preise
+title: Preise & Angebot
 linkTitle: Private Nutzung
-draft: false
-menu:
-  main:
-    name: 'Preise'
-    weight: 400
+draft: true
 layout: tabs
 weight: 100
 ---
@@ -22,9 +18,9 @@ weight: 100
 		</tr>
 		<tr>
 			<td>Ohne Monatliche Kosten, für alle Werkstätten</td>
-			<td>Ohne</td>
-			<td><strong>6€ / Stunde</strong></td>
-			<td>
+			<td data-title="Grundpreis">Ohne</td>
+			<td data-title="Stundenpreis"><strong>6€ / Stunde</strong></td>
+			<td data-title="Tagespreis">
 				<p><strong>maximal 24€ / Tag</strong></p>
 				<p class="table__comment">12 * 24€ = maximal 288€ pro Monat</p>
 			</td>
@@ -41,9 +37,9 @@ weight: 100
 		</tr>
 		<tr>
 			<td>Fester Preis für zeitlich unbegrenzte Nutzung zu den Öffnungszeiten. Eine Werkstatt (z.B. Schreinerei oder Schlosserei) inklusive.</td>
-			<td><strong>70€ / Monat</strong></td>
-			<td>Inklusive</td>
-			<td>Inklusive</td>
+			<td data-title="Grundpreis"><strong>70€ / Monat</strong></td>
+			<td data-title="Stundenpreis">Inklusive</td>
+			<td data-title="Tagespreis">Inklusive</td>
 		</tr>
 		<tr>
 			<td>Jede weitere Werkstatt</td>
@@ -64,9 +60,9 @@ weight: 100
 		</tr>
 		<tr>
 			<td>Mehr Machen. Weniger Zahlen. Eine Werkstatt (z.B. Schreinerei oder Schlosserei) inklusive.</td>
-			<td><strong>24€ / Monat</strong></td>
-			<td><strong>2€ / Stunde</strong></td>
-			<td>
+			<td data-title="Grundpreis"><strong>24€ / Monat</strong></td>
+			<td data-title="Stundenpreis"><strong>2€ / Stunde</strong></td>
+			<td data-title="Tagespreis">
 				<p><strong>maximal 8€ / Tag</strong></p>
 				<p class="table__comment">22€ + 12 Öffnungstage * 8€ = maximal 122€ pro Monat</p>
 			</td>
@@ -74,11 +70,11 @@ weight: 100
 		<tr>
 			<td>&nbsp;</td>
 			<td colspan="3">
-				<p class="table__comment">18€ / Monat für Schüler, Studenten, Rentner und alle, die eine Ermäßigung brauchen.</p>
+				<p class="table__comment">16€ / Monat für Schüler, Studenten, Rentner und alle, die eine Ermäßigung brauchen.</p>
 				<details>
 					<summary><span>Details</span></summary>
 					<div class="note">
-						<p>18€ für alle, die eine Ermäßigung brauchen? Ja. Ohne weitere Fragen und ohne Nachweis. Wir wollen, dass jeder zu uns kommen kann und wir vertrauen euch. Mit jedem Euro mehr unterstützt Du uns dabei noch besser zu werden.</p>
+						<p>16€ für alle, die eine Ermäßigung brauchen? Ja. Ohne weitere Fragen und ohne Nachweis. Wir wollen, dass jeder zu uns kommen kann und wir vertrauen euch. Mit jedem Euro mehr unterstützt Du uns dabei noch besser zu werden.</p>
 					</div>
 				</details>
 			</td>
