--- a/content/preise/_index.html
+++ b/content/preise/_index.html
@@ -1,71 +1,87 @@
 ---
-title: Preise & Angebot
+title: Angebot & Preise
 linkTitle: Private Nutzung
 draft: false
 menu:
   main:
     name: 'Preise'
     weight: 400
-#layout: tabs
-layout: single
+layout: tabs
 weight: 100
 ---
-
-<p class="note"><strong>Achtung!</strong> Diese Preise gelten nur noch bis Ende September! Um unser erweitertes Angebot dauerhaft finanzieren zu können, wird es im Oktober neue Preise geben. Jetzt noch schnell ein Abo zum alten Preis sichern und sparen.</p>
 
 <table class="table table--pricing">
 	<tbody>
 		<tr>
-			<th><h3>Spontan</h3></th>
+			<th>
+				<h3>Spontan</h3>
+			</th>
 			<th>Grundpreis</th>
 			<th>Stundenpreis</th>
 			<th>Tagespreis</th>
 		</tr>
 		<tr>
-			<td>Ohne monatliche Kosten</td>
-			<td>-</td>
-			<td><strong>5€ / Stunde</strong></td>
-			<td><strong>20€ / Tag</strong></td>
-		</tr>
-	</tbody>
-	<tbody>
-		<tr>
-			<th><h3>Abo</h3></th>
-			<th>Grundpreis</th>
-			<th>Stundenpreis</th>
-			<th>Tagespreis</th>
-		</tr>
-		<tr>
-			<td>Mehr machen, weniger zahlen</td>
-			<td><strong>20€ / Monat</strong></td>
-			<td><strong>1€ / Stunde</strong></td>
-			<td><strong>5€ / Tag</strong></td>
-		</tr>
-		<tr>
-			<td>&nbsp;</td>
-			<td colspan="3">
-				<p class="table__comment">15€ / Monat für Schüler, Studenten, Rentner und alle, die eine Ermäßigung&nbsp;brauchen.</p>
-				<details>
-					<summary><span>Details</span></summary>
-					<div class="note">
-						<p>15€ für alle, die eine Ermäßigung brauchen? Ja. Ohne weitere Fragen und ohne Nachweis. Wir wollen, dass jeder zu uns kommen kann und wir vertrauen euch. Mit jedem Euro mehr unterstützt Du uns dabei noch besser zu werden.</p>
-					</div>
-				</details>
+			<td>Ohne Monatliche Kosten, für alle Werkstätten</td>
+			<td>Ohne</td>
+			<td><strong>6€ / Stunde</strong></td>
+			<td>
+				<p><strong>maximal 24€ / Tag</strong></p>
+				<p class="table__comment">12 * 24€ = maximal 288€ pro Monat</p>
 			</td>
 		</tr>
 	</tbody>
 	<tbody>
 		<tr>
-			<th><h3>Flatrate</h3></th>
+			<th>
+				<h3>Flat</h3>
+			</th>
 			<th>Grundpreis</th>
 			<th>Stundenpreis</th>
 			<th>Tagespreis</th>
 		</tr>
 		<tr>
-			<td>Fester Preis für zeitlich unbegrenzte Nutzung zu den Öffnungszeiten</td>
-			<td><strong>60€ / Monat</strong></td>
-			<td>-</td>
-			<td>-</td>
+			<td>Fester Preis für zeitlich unbegrenzte Nutzung zu den Öffnungszeiten. Eine Werkstatt (z.B. Schreinerei oder Schlosserei) inklusive.</td>
+			<td><strong>70€ / Monat</strong></td>
+			<td>Inklusive</td>
+			<td>Inklusive</td>
+		</tr>
+		<tr>
+			<td>Jede weitere Werkstatt</td>
+			<td colspan="3">
+				<p>je 10€ / Monat</p>
+				<p class="table__comment">= maximal 100€ pro Monat für alle unbegrenze Nutzung aller vier aktuell geöffneten Werkstätten (Schreinerei, Schlosserei, FabLab, Siebdruck)</p>
+			</td>
+		</tr>
+	</tbody>
+	<tbody>
+		<tr>
+			<th>
+				<h3>Spar-Abo</h3>
+			</th>
+			<th>Grundpreis</th>
+			<th>Stundenpreis</th>
+			<th>Tagespreis</th>
+		</tr>
+		<tr>
+			<td>Mehr Machen. Weniger Zahlen. Eine Werkstatt (z.B. Schreinerei oder Schlosserei) inklusive.</td>
+			<td><strong>24€ / Monat</strong></td>
+			<td><strong>2€ / Stunde</strong></td>
+			<td>
+				<p><strong>maximal 8€ / Tag</strong></p>
+				<p class="table__comment">22€ + 12 Öffnungstage * 8€ = maximal 122€ pro Monat</p>
+			</td>
+		</tr>
+		<tr>
+			<td>&nbsp;</td>
+			<td colspan="3">
+				<p class="table__comment">18€ / Monat für Schüler, Studenten, Rentner und alle, die eine Ermäßigung brauchen.</p>
+				<details>
+					<summary><span>Details</span></summary>
+					<div class="note">
+						<p>18€ für alle, die eine Ermäßigung brauchen? Ja. Ohne weitere Fragen und ohne Nachweis. Wir wollen, dass jeder zu uns kommen kann und wir vertrauen euch. Mit jedem Euro mehr unterstützt Du uns dabei noch besser zu werden.</p>
+					</div>
+				</details>
+			</td>
 		</tr>
 	</tbody>
 </table>
@@ -90,9 +106,10 @@ weight: 100
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
-			<td colspan="3">
+			<td colspan="2">
 				<p class="table__comment">Beinhaltet Verschleiß, Wartung, Schärfen und Kosten für regelmäßige Funktionsprüfungen, etc. Gilt für alle Nutzer.</p>
 			</td>
+			<td>&nbsp;</td>
 		</tr>
 	</tbody>
 </table>
@@ -127,9 +144,9 @@ Kinder bis 14 dürfen in Absprache mit den FachberaterInnen und in Begleitung ei
 Wenn du Hilfe bei der Planung eines Projekts brauchst, beraten dich unsere Fachkräfte für **32€** pro Stunde.
 {{< /css >}}
 
-{{< css "cs4-lg c3-lg" >}}
+{{< css "cs4-lg c2-lg" >}}
 ### Lagerung
 
-Wenn du angefangene Projekte nicht mit nach Hause nehmen willst kannst du Flaches für **0,40€ / Tag** im Plattenlager und Sperriges für **1€ / Tag** je angefangenem Quadratmeter Stellfläche von Montag bis Freitag lagern. Von Freitag bis Sonntag zahlst du nichts.
+Wenn du angefangene Projekte nicht mit nach Hause nehmen willst kannst du Flaches für **0,40€&nbsp;/&nbsp;Tag** im Plattenlager und Sperriges für **5€&nbsp;/&nbsp;Tag** pro Quadratmeter Stellfläche von Montag bis Freitag lagern. Von Freitag bis Sonntag zahlst du nichts.
 {{< /css >}}
 </div>
