Clarify storage pricing

--- a/content/preise.html
+++ b/content/preise.html
@@ -127,9 +127,9 @@ Kinder bis 14 dürfen in Absprache mit den FachberaterInnen und in Begleitung ei
 Wenn du Hilfe bei der Planung eines Projekts brauchst, beraten dich unsere Fachkräfte für **32€** pro Stunde.
 {{< /css >}}
 
-{{< css "cs4-lg c2-lg" >}}
+{{< css "cs4-lg c3-lg" >}}
 ### Lagerung
 
-Wenn du angefangene Projekte nicht mit nach Hause nehmen willst kannst du Flaches für **2€** im Plattenlager und Sperriges für 5€ pro Quadratmeter Stellfläche von Montag bis Freitag lagern. Von Freitag bis Sonntag zahlst du nichts.
+Wenn du angefangene Projekte nicht mit nach Hause nehmen willst kannst du Flaches für **0,40€ / Tag** im Plattenlager und Sperriges für **1€ / Tag** je angefangenem Quadratmeter Stellfläche von Montag bis Freitag lagern. Von Freitag bis Sonntag zahlst du nichts.
 {{< /css >}}
 </div>
