Corrected price per day

--- a/content/preise.html
+++ b/content/preise.html
@@ -25,7 +25,7 @@ weight: 100
 			<td>Ohne monatliche Kosten</td>
 			<td>-</td>
 			<td><strong>5€ / Stunde</strong></td>
-			<td><strong>20€ / Monat</strong></td>
+			<td><strong>20€ / Tag</strong></td>
 		</tr>
 	</tbody>
 	<tbody>
