Neue Preisvorschläge für Spontan und Spar-Abo

--- a/content/preise/_index.html
+++ b/content/preise/_index.html
@@ -23,10 +23,10 @@ weight: 100
 		<tr>
 			<td>Ohne Monatliche Kosten, für alle Werkstätten</td>
 			<td>Ohne</td>
-			<td><strong>6€ / Stunde</strong></td>
+			<td><strong>7€ / Stunde</strong></td>
 			<td>
-				<p><strong>maximal 24€ / Tag</strong></p>
-				<p class="table__comment">12 * 24€ = maximal 288€ pro Monat</p>
+				<p><strong>maximal 35€ / Tag</strong></p>
+				<p class="table__comment">12 * 35€ = maximal 420€ pro Monat</p>
 			</td>
 		</tr>
 	</tbody>
@@ -63,12 +63,18 @@ weight: 100
 			<th>Tagespreis</th>
 		</tr>
 		<tr>
-			<td>Mehr Machen. Weniger Zahlen. Eine Werkstatt (z.B. Schreinerei oder Schlosserei) inklusive.</td>
-			<td><strong>24€ / Monat</strong></td>
+			<td>Mehr Machen, weniger Zahlen. Alle Werkstätten inklusive. </td>
+			<td><strong>25€ / Monat</strong></td>
 			<td><strong>2€ / Stunde</strong></td>
 			<td>
-				<p><strong>maximal 8€ / Tag</strong></p>
-				<p class="table__comment">22€ + 12 Öffnungstage * 8€ = maximal 122€ pro Monat</p>
+				<p><strong>maximal 10€ / Tag</strong></p>
+				<p class="table__comment">25€ + 12 Öffnungstage * 10€ = maximal 145€ pro Monat</p>
+				<details>
+					<summary><span>Details</span></summary>
+					<div class="note">
+						<p>Nur 3 Monate Mindestlaufzeit, Kündigung jederzeit möglich.</p>
+					</div>
+				</details>
 			</td>
 		</tr>
 		<tr>
