--- a/content/preise/_index.html
+++ b/content/preise/_index.html
@@ -3,9 +3,9 @@ title: Angebot & Preise
 linkTitle: Private Nutzung
 draft: false
 menu:
-  main:
-    name: 'Preise'
-    weight: 400
+    main:
+        name: 'Preise'
+        weight: 400
 layout: tabs
 weight: 100
 ---
@@ -23,10 +23,10 @@ weight: 100
 		<tr>
 			<td>Ohne Monatliche Kosten, für alle Werkstätten</td>
 			<td>Ohne</td>
-			<td><strong>5€ / Stunde</strong></td>
+			<td><strong>6€ / Stunde</strong></td>
 			<td>
-				<p><strong>maximal 25€ / Tag</strong></p>
-				<p class="table__comment">12 * 20€ = maximal 240€ pro Monat</p>
+				<p><strong>maximal 24€ / Tag</strong></p>
+				<p class="table__comment">12 * 24€ = maximal 288€ pro Monat</p>
 			</td>
 		</tr>
 	</tbody>
@@ -40,16 +40,22 @@ weight: 100
 			<th>Tagespreis</th>
 		</tr>
 		<tr>
-			<td>Fester Preis für zeitlich unbegrenzte Nutzung zu den Öffnungszeiten. Eine Werkstatt (z.B. Schreinerei oder Schlosserei) inklusive.</td>
-			<td><strong>60€ / Monat</strong></td>
+			<td>
+				Fester Preis für zeitlich unbegrenzte Nutzung zu den Öffnungszeiten. Eine Werkstatt
+				(z.B. Schreinerei oder Schlosserei) inklusive.
+			</td>
+			<td><strong>72€ / Monat</strong></td>
 			<td>Inklusive</td>
 			<td>Inklusive</td>
 		</tr>
 		<tr>
 			<td>Jede weitere Werkstatt</td>
 			<td colspan="3">
-				<p>je 10€ / Monat</p>
-				<p class="table__comment">= maximal 100€ pro Monat für alle unbegrenze Nutzung aller vier aktuell geöffneten Werkstätten (Schreinerei, Schlosserei, FabLab, Siebdruck)</p>
+				<p>je 6€ / Monat</p>
+				<p class="table__comment">
+					= maximal 90€ pro Monat für alle unbegrenze Nutzung aller vier aktuell
+					geöffneten Werkstätten (Schreinerei, Schlosserei, FabLab, Siebdruck)
+				</p>
 			</td>
 		</tr>
 	</tbody>
@@ -63,16 +69,19 @@ weight: 100
 			<th>Tagespreis</th>
 		</tr>
 		<tr>
-			<td>Mehr Machen, weniger Zahlen. Alle Werkstätten inklusive. </td>
-			<td><strong>20€ / Monat</strong></td>
-			<td><strong>1€ / Stunde</strong></td>
+			<td>Mehr Machen, weniger Zahlen. Alle Werkstätten inklusive.</td>
+			<td><strong>24€ / Monat</strong></td>
+			<td><strong>2€ / Stunde</strong></td>
 			<td>
-				<p><strong>maximal 5€ / Tag</strong></p>
-				<p class="table__comment">20€ + 12 Öffnungstage * 5€ = maximal 80€ pro Monat</p>
+				<p><strong>maximal 8€ / Tag</strong></p>
+				<p class="table__comment">24€ + 12 Öffnungstage * 8€ = maximal 120€ pro Monat</p>
 				<details>
 					<summary><span>Details</span></summary>
 					<div class="note">
-						<p>Nur 3 Monate Mindestlaufzeit, Kündigung jederzeit möglich.</p>
+						<p>
+							Nur 3 Monate Mindestlaufzeit, Kündigung
+							<strong>jederzeit</strong> möglich.
+						</p>
 					</div>
 				</details>
 			</td>
@@ -80,11 +89,19 @@ weight: 100
 		<tr>
 			<td>&nbsp;</td>
 			<td colspan="3">
-				<p class="table__comment">15€ / Monat für Schüler, Studenten, Rentner und alle, die eine Ermäßigung brauchen.</p>
+				<p class="table__comment">
+					16€ / Monat für Schüler, Studenten, Rentner und alle, die eine Ermäßigung
+					brauchen.
+				</p>
 				<details>
 					<summary><span>Details</span></summary>
 					<div class="note">
-						<p>15€ für alle, die eine Ermäßigung brauchen? Ja. Ohne weitere Fragen und ohne Nachweis. Wir wollen, dass jeder zu uns kommen kann und wir vertrauen euch. Mit jedem Euro mehr unterstützt Du uns dabei noch besser zu werden.</p>
+						<p>
+							16€ für alle, die eine Ermäßigung brauchen? Ja. Ohne weitere Fragen und
+							ohne Nachweis. Wir wollen, dass jeder zu uns kommen kann und wir
+							vertrauen euch. Mit jedem Euro mehr unterstützt Du uns dabei noch besser
+							zu werden.
+						</p>
 					</div>
 				</details>
 			</td>
@@ -113,7 +130,10 @@ weight: 100
 		<tr>
 			<td>&nbsp;</td>
 			<td colspan="2">
-				<p class="table__comment">Beinhaltet Verschleiß, Wartung, Schärfen und Kosten für regelmäßige Funktionsprüfungen, etc. Gilt für alle Nutzer.</p>
+				<p class="table__comment">
+					Beinhaltet Verschleiß, Wartung, Schärfen und Kosten für regelmäßige
+					Funktionsprüfungen, etc. Gilt für alle Nutzer.
+				</p>
 			</td>
 			<td>&nbsp;</td>
 		</tr>
