Pay what you want

--- a/content/preise.html
+++ b/content/preise.html
@@ -11,7 +11,34 @@ layout: single
 weight: 100
 ---
 
-<p class="note"><strong>Achtung!</strong> Diese Preise gelten nur noch bis Ende September! Um unser erweitertes Angebot dauerhaft finanzieren zu können, wird es im Oktober neue Preise geben. Jetzt noch schnell ein Abo zum alten Preis sichern und sparen.</p>
+<h2>
+	Sonderpreise August-Oktober 2020
+</h2>
+
+<p>
+	Wir schicken die Preistabellen in den Urlaub. Ab 1. August 2020 bis 31. Oktober 2020 gelten folgende Preiskonditionen im Habitat: <strong>Du bezahlst, was dir das Habitat wert ist.</strong>
+</p>
+
+<p>
+	Um dir die Entscheidung etwas leichter zu machen hier noch ein paar Hinweise:
+</p>
+
+<ol>
+	<li>Ab 10€ pro Stunde, in der du in der Werkstatt arbeitest, können wir das Habitat dauerhaft für dich betreiben und langfristig noch besser machen.</li>
+	<li>Die Nutzung der großen Maschinen verursacht keine zusätzlichen Kosten für dich. </li>
+	<li>Die Maschineneinweisungen kosten weiterhin 10€ pro Teilnehmer.</li>
+	<li>Spar-Abo-Kunden (20€/Monat) zahlen natürlich auch weiterhin weniger. </li>
+</ol>
+
+<p class="meta">Warum mindestens 10€? Weil wir davon die Strom und Miete für die Werkstatt bezahlen, Maschinen warten, Sägeblätter und andere Messer schleifen lassen, Werkzeuge ersetzen, Gas und Schweißdraht für die Schlosserei nachkaufen und mit Wartung und Pflege dafür sorgen, dass es immer ein Habitat für dich gibt. </p>
+
+<p>&heartsuit; <strong>Dein Team vom Habitat.</strong></p>
+
+<hr>
+
+<h2>Bisherige Preise</h2>
+
+<p class="note"><strong>Achtung!</strong> Diese Preise gelten nur bis 31. Juli 2020.</p>
 
 <table class="table table--pricing">
 	<tbody>
