--- a/content/preise.html
+++ b/content/preise.html
@@ -24,13 +24,13 @@ weight: 100
 </p>
 
 <ol>
-	<li>Ab 10€ pro Stunde, in der du in der Werkstatt arbeitest, können wir das Habitat dauerhaft für dich betreiben und langfristig noch besser machen.</li>
+	<li>Ab 10€ pro Arbeitsstunde ermöglichst du uns, das Habitat dauerhaft für dich zu betreiben und langfristig noch besser zu machen.</li>
 	<li>Die Nutzung der großen Maschinen verursacht keine zusätzlichen Kosten für dich. </li>
 	<li>Die Maschineneinweisungen kosten weiterhin 10€ pro Teilnehmer.</li>
 	<li>Spar-Abo-Kunden (20€/Monat) zahlen natürlich auch weiterhin weniger. </li>
 </ol>
 
-<p class="meta">Warum mindestens 10€? Weil wir davon die Strom und Miete für die Werkstatt bezahlen, Maschinen warten, Sägeblätter und andere Messer schleifen lassen, Werkzeuge ersetzen, Gas und Schweißdraht für die Schlosserei nachkaufen und mit Wartung und Pflege dafür sorgen, dass es immer ein Habitat für dich gibt. </p>
+<p class="meta">Warum mindestens 10€? Weil wir davon Strom und Miete für die Werkstatt bezahlen, Maschinen warten, Sägeblätter und andere Messer schleifen lassen, Werkzeuge ersetzen, Gas und Schweißdraht für die Schlosserei nachkaufen und mit Wartung und Pflege dafür sorgen, dass es immer ein Habitat für dich gibt. </p>
 
 <p>&heartsuit; <strong>Dein Team vom Habitat.</strong></p>
 
