Update Info for Abokunden

--- a/content/preise.html
+++ b/content/preise.html
@@ -27,7 +27,7 @@ weight: 100
 	<li>Ab 10€ pro Arbeitsstunde ermöglichst du uns, das Habitat dauerhaft für dich zu betreiben und langfristig noch besser zu machen.</li>
 	<li>Die Nutzung der großen Maschinen verursacht keine zusätzlichen Kosten für dich. </li>
 	<li>Die Maschineneinweisungen kosten weiterhin 10€ pro Teilnehmer.</li>
-	<li>Spar-Abo-Kunden (20€/Monat) zahlen natürlich auch weiterhin weniger. </li>
+	<li>Alle bisherigen Abos laufen zu den ursprünglichen Konditionen weiter und können auch weiterhin abgeschlossen werden. Die Sonderkonditionen beziehen sich auf den Preis pro Arbeitsstunde/Tag und den Wegfall der zusätzlichen Kosten für Maschinenlaufzeiten.</li>
 </ol>
 
 <p class="meta">Warum mindestens 10€? Weil wir davon Strom und Miete für die Werkstatt bezahlen, Maschinen warten, Sägeblätter und andere Messer schleifen lassen, Werkzeuge ersetzen, Gas und Schweißdraht für die Schlosserei nachkaufen und mit Wartung und Pflege dafür sorgen, dass es immer ein Habitat für dich gibt. </p>
